unpackaged/main/default/objects/Color__c/fields/Color_Group__c.field-meta.xml
<CustomField>
    <fullName>Color_Group__c</fullName>
    <formula>CASE( Name, 
					&quot;All-Black&quot;,&quot;Black&quot;,
					&quot;Azure&quot;,&quot;Azure&quot;,
					&quot;Beige&quot;,&quot;Beige&quot;,
					&quot;Berry&quot;,&quot;Berry&quot;,
					&quot;Black&quot;,&quot;Black&quot;,
					&quot;Black Gloss&quot;,&quot;Black&quot;,
					&quot;Black Matte&quot;,&quot;Black&quot;,
					&quot;Blue&quot;,&quot;Blue&quot;,
					&quot;Blue Gloss&quot;,&quot;Blue&quot;,
					&quot;Blue Matte&quot;,&quot;Blue&quot;,
					&quot;Blush&quot;,&quot;Blush&quot;,
					&quot;Brown&quot;,&quot;Brown&quot;,
					&quot;Clementine&quot;,&quot;Clementine&quot;,
					&quot;Cognac&quot;,&quot;Cognac&quot;,
					&quot;Coral&quot;,&quot;Coral&quot;,
					&quot;Coral Gloss&quot;,&quot;Coral&quot;,
					&quot;Glacier&quot;,&quot;Glacier&quot;,
					&quot;Gold&quot;,&quot;Gold&quot;,
					&quot;Gold Rose&quot;,&quot;Gold Rose&quot;,
					&quot;Green&quot;,&quot;Green&quot;,
					&quot;Green Gloss&quot;,&quot;Green&quot;,
					&quot;Honey&quot;,&quot;Honey&quot;,
					&quot;Iridescent&quot;,&quot;Iridescent&quot;,
					&quot;Kaki&quot;,&quot;Kaki&quot;,				
					&quot;Lagoon&quot;,&quot;Lagoon&quot;,
					&quot;Light Blue&quot;,&quot;Light Blue&quot;,
					&quot;Marine&quot;,&quot;Marine&quot;,
					&quot;Ocean&quot;,&quot;Ocean&quot;,
					&quot;Paprika&quot;,&quot;Paprika&quot;,
					&quot;Peach Blue&quot;,&quot;Peach&quot;,
					&quot;Pink&quot;,&quot;Pink&quot;,
					&quot;Red&quot;,&quot;Red&quot;,
					&quot;Red Gloss&quot;,&quot;Red&quot;,
					&quot;Saffron Gloss&quot;,&quot;Saffron&quot;,
					&quot;Sage Gloss&quot;,&quot;Sage&quot;,
					&quot;Scarlet&quot;,&quot;Scarlet&quot;,
					&quot;Silver&quot;,&quot;Silver&quot;,
					&quot;Slate Gloss&quot;,&quot;Slate&quot;,
					&quot;Titanium&quot;,&quot;Titanium&quot;,
					&quot;White&quot;,&quot;White&quot;,
					&quot;White Gloss&quot;,&quot;White&quot;,
					&quot;Yellow&quot;,&quot;Yellow&quot;,
					&quot;Rose&quot;,&quot;Rose&quot;,
					&quot;Cactus&quot;,&quot;Cactus&quot;,
                                        &quot;Mirror&quot;,&quot;Mirror&quot;,
					&quot;&quot;
				)</formula>
    <label>Color Group</label>
    <type>Text</type>
</CustomField>