unpackaged/main/default/objects/Color__c/fields/Color_Type__c.field-meta.xml
<CustomField>
    <fullName>Color_Type__c</fullName>
    <label>Color Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>