unpackaged/main/default/objects/Color__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Color_Group__c</columns>
    <columns>Color_Type__c</columns>
    <columns>Name__c</columns>
    <columns>Image_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>